--- a/moodiary/package.json
+++ b/moodiary/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/slider": "^5.1.1",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.16",
     "dayjs": "^1.11.19",
@@ -30,11 +31,13 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "react-native-svg-transformer": "^1.5.2",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
